<resources>
    <string name="app_name">Dhaka City Guide</string>
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="parks">Parks</string>
    <string name="tourist_site">Tourist Spots</string>
    <string name="hotel_one">FARS Hotel and Resorts</string>
    <string name="hotel_two">Marino Hotel</string>
    <string name="hotel_three">The Westin Dhaka</string>
    <string name="hotel_four">Amari Dhaka</string>
    <string name="hotel_five">THE WAY Dhaka</string>
    <string name="hotel_six">Innotel Business Boutique Hotel</string>
    <string name="hotel_seven">Radisson Blu Dhaka Water Garden</string>
    <string name="hotel_eight">Pan Pacific Sonargaon</string>
    <string name="hotel_nine">Six Seasons Hotel</string>
    <string name="hotel_ten">Dhaka Regency Hotel and Resort</string>
    <string name="decription_hotel_one">
        Bright hotel with 2 restaurants and a cafe, plus a full-service spa, a gym and a rooftop pool.
        This polished hotel is 1 km from Baitul Mukarram, Bangladesh's national mosque, 2 km from the Bangladesh National Museum and 4 km from the 17th-century Lalbagh Fort.
    </string>
    <string name="decription_hotel_two">Unassuming hotel offering simple rooms and a restaurant, as well as a free breakfast buffet.
        Set 2 km from Hazrat Shahjalal International Airport, this straightforward hotel is also 14 km from the Sher-e-Bangla National Cricket Stadium and 16 km from Dhaka Zoo.
    </string>
    <string name="decription_hotel_three">Elegant quarters in a chic hotel with a club lounge and  5 restaurants, plus an outdoor pool and  a spa.
    Offering views of Gulshan Lake, this upscale hotel in a high-rise building is 2 km from Banani train station and 10 km from Bangladesh National Museum
    </string>
    <string name="decription_hotel_four">Sleek hotel offering polished quarters with city views, plus a trendy rooftop bar and  an Asian eatery.
        Overlooking Banani Lake, this modern hotel with a dramatic vaulted lobby is 9 km from Jamuna Future Park shopping centre and 11 km from Baitul Mukarram mosque.

    </string>
    <string name="decription_hotel_five">The Way Dhaka is a cosy and peaceful hotel in Dhaka, near Gulshan Street. It offers you a comfortable room
        Free breakfast, Laundry service, Kid-friendly, RestaurantHot tub, Fitness center
    </string>
    <string name="decription_hotel_six">Bright rooms in a unassuming hotel with free breakfast, a grill restaurant and a sauna.
        Set 6 km from the national assembly building, Jatiyo Sangsad Bhaban, this straightforward hotel in a tower is also 9 km from Baitul Mukarram mosque and 10 km from the Sher-e-Bangla National Stedium.

    </string>
    <string name="decription_hotel_seven">Stylish airport lodging with 3 restaurants and a cigar lounge, plus an outdoor pool and meeting space.
        Within 5.3 km of Hazrat Shahjalal International Airport, this contemporary hotel is also 8 km from the National Parliament House and 12 km from Lalbagh Fort.

    </string>
    <string name="decription_hotel_eight">Polished property offering understated rooms, international eateries and chic bars, plus a pool.
        With a lush garden setting, this refined hotel is 2 km from the Bangladesh National Museum and 3 km from Jatiyo Sangsad Bhaban, the Bangladesh National Parliament

    </string>
    <string name="decription_hotel_nine">High-end quarters in a posh hotel offering 4 restaurants, 2 outdoor pools and a spa.
        Overlooking Gulshan Lake, this refined hotel is 8 km from Hazrat Shahjalal International Airport.

    </string>
    <string name="decription_hotel_ten">Relaxed airport hotel featuring a rooftop pool, a gym and a spa, plus a 24-hour restaurant and a bar.
        This informal airport hotel is 3 km from Hazrat Shahjalal International Airport and 4 km from Jamuna Future Park shopping centre.

    </string>
    <string name="location_hotel_one"> Akram Center, 212 Shahid Syed Nazrul Islam Sharani, Dhaka 1000</string>
    <string name="location_hotel_two">Sector 4, House No 45, Road No. 11, Dhaka 1230</string>
    <string name="location_hotel_three">Main Gulshan Avenue, Plot-01, Road 45, Gulshan-2, Dhaka 1212</string>
    <string name="location_hotel_four">House no. 47, Road No 41, Gulshan 2, Dhaka 1212</string>
    <string name="location_hotel_five">House No 10/B/2, Road-54/B, Gulshan-2, Dhaka 1212</string>
    <string name="location_hotel_six">House-23, Block E, Road No 10, Banani Road, Dhaka 1213</string>
    <string name="location_hotel_seven">Airport Road, Dhaka Cantonment, Dhaka 1206</string>
    <string name="location_hotel_eight">107 Kazi Nazrul Islam Avenue, Dhaka 1215</string>
    <string name="location_hotel_nine">House No 19, Road No 96, Gulshan 2, Dhaka 1212</string>
    <string name="location_hotel_ten">Airport Roundabout, Dhaka 1229</string>
    <string name="web_hotel_one">http://www.farshotelbd.com</string>
    <string name="web_hotel_two">http://www.marinohotel.com.bd</string>
    <string name="web_hotel_three">http://www.starwoodhotels.com/westin/index.html?language=en_US</string>
    <string name="web_hotel_four">https://www.amari.com/dhaka</string>
    <string name="web_hotel_five">http://thewaydhaka.com</string>
    <string name="web_hotel_six">http://www.innotelbatonrouge.com</string>
    <string name="web_hotel_seven">https://www.radissonblu.com/en</string>
    <string name="web_hotel_eight">https://m.panpacific.com/en/hotels-resorts/bangladesh/dhaka.html</string>
    <string name="web_hotel_nine">http://sixseasonshotel.com/</string>
    <string name="web_hotel_ten">http://dhakaregency.com/</string>
    <string name="map_hotel_one">https://www.google.com.bd/maps/place/FARS+Hotel+%26+Resorts/@23.7316419,90.4077133,17z/data=!4m12!1m6!3m5!1s0x3755b8f68b88702b:0xadeae2b143bef043!2sFARS+Hotel+%26+Resorts!8m2!3d23.731637!4d90.409902!3m4!1s0x3755b8f68b88702b:0xadeae2b143bef043!8m2!3d23.731637!4d90.409902?hl=en</string>
    <string name="map_hotel_two">https://www.google.com.bd/maps/place/Marino+Hotel+Banani/@23.7993349,90.4051385,17z/data=!4m5!3m4!1s0x3755c705e50502a1:0x75ccabeb380ee580!8m2!3d23.79933!4d90.4073272?hl=en</string>
    <string name="map_hotel_three">https://www.google.com.bd/maps/place/The+Westin+Dhaka/@23.7933176,90.4124613,17z/data=!4m12!1m6!3m5!1s0x3755c7a72f17bb83:0x57188ff62fd95026!2sThe+Westin+Dhaka!8m2!3d23.7931842!4d90.4146906!3m4!1s0x3755c7a72f17bb83:0x57188ff62fd95026!8m2!3d23.7931842!4d90.4146906?hl=en</string>
    <string name="map_hotel_four">https://www.google.com.bd/maps/place/Amari+Dhaka/@23.790561,90.4100836,17z/data=!4m12!1m6!3m5!1s0x3755c70a7610d4f1:0x73d8f4d04735bc67!2sAmari+Dhaka!8m2!3d23.7905561!4d90.4122723!3m4!1s0x3755c70a7610d4f1:0x73d8f4d04735bc67!8m2!3d23.7905561!4d90.4122723?hl=en</string>
    <string name="map_hotel_five">https://www.google.com.bd/maps/place/THE+WAY+Dhaka/@23.7968169,90.4094213,17z/data=!4m12!1m6!3m5!1s0x3755c708157b63fd:0x6b3426096debb534!2sTHE+WAY+Dhaka!8m2!3d23.796812!4d90.41161!3m4!1s0x3755c708157b63fd:0x6b3426096debb534!8m2!3d23.796812!4d90.41161?hl=en</string>
    <string name="map_hotel_six">https://www.google.com.bd/maps/place/Innotel+Business+Boutique+Hotel/@23.7922638,90.4044251,17z/data=!4m12!1m6!3m5!1s0x3755c70c21083d3f:0x9d49e5ea17536055!2sInnotel+Business+Boutique+Hotel!8m2!3d23.7922589!4d90.4066138!3m4!1s0x3755c70c21083d3f:0x9d49e5ea17536055!8m2!3d23.7922589!4d90.4066138?hl=en</string>
    <string name="map_hotel_seven">https://www.google.com.bd/maps/place/Radisson+Blu+Dhaka+Water+Garden/@23.8160459,90.4065313,17z/data=!4m12!1m6!3m5!1s0x3755c6feb6c1b7b1:0x76350c55ebc50c34!2sRadisson+Blu+Dhaka+Water+Garden!8m2!3d23.816041!4d90.40872!3m4!1s0x3755c6feb6c1b7b1:0x76350c55ebc50c34!8m2!3d23.816041!4d90.40872?hl=en</string>
    <string name="map_hotel_eight">https://www.google.com.bd/maps/place/Pan+Pacific+Sonargaon+Dhaka+Hotel/@23.7495859,90.3923203,17z/data=!4m12!1m6!3m5!1s0x3755b897e97a02b9:0x27f34ccd83ba6ede!2sPan+Pacific+Sonargaon+Dhaka+Hotel!8m2!3d23.749581!4d90.394509!3m4!1s0x3755b897e97a02b9:0x27f34ccd83ba6ede!8m2!3d23.749581!4d90.394509?hl=en</string>
    <string name="map_hotel_nine">https://www.google.com.bd/maps/place/Six+Seasons+Hotel/@23.7945282,90.4174264,17z/data=!4m12!1m6!3m5!1s0x3755c7a4f705a4b1:0xe0b5315081473ad!2sSix+Seasons+Hotel!8m2!3d23.7945233!4d90.4196151!3m4!1s0x3755c7a4f705a4b1:0xe0b5315081473ad!8m2!3d23.7945233!4d90.4196151?hl=en</string>
    <string name="map_hotel_ten">https://www.google.com.bd/maps/place/Dhaka+Regency+Hotel+%26+Resort/@23.8295583,90.4190544,20.25z/data=!4m12!1m6!3m5!1s0x3755c65c605d0e0b:0xe91272e017ec415f!2sDhaka+Regency+Hotel+%26+Resort!8m2!3d23.829449!4d90.419273!3m4!1s0x3755c65c605d0e0b:0xe91272e017ec415f!8m2!3d23.829449!4d90.419273?hl=en</string>
    <string name="restaurants_one">Tokyo Express</string>
    <string name="restaurants_two">Voot Restaurant</string>
    <string name="restaurants_three">Saltz</string>
    <string name="restaurants_four">Aaheli Kabab and Restaurant</string>
    <string name="restaurants_five">Attin</string>
    <string name="restaurants_six">Eat N Enjoy</string>
    <string name="restaurants_seven">Eat n Pay</string>
    <string name="restaurants_eight">Re Eat Dhaba</string>
    <string name="restaurants_nine">Boomers Cafe Banani Branch</string>
    <string name="restaurants_ten">KFC Restaurant</string>
    <string name="address_restaurants_one">23B Rd No 112, Dhaka 1212</string>
    <string name="address_restaurants_two"> House 25, Rd No. 11, Dhaka 1230</string>
    <string name="address_restaurants_three">8 Gulshan North Ave, Dhaka 1212</string>
    <string name="address_restaurants_four">Ni Tower, Block-E, Road-10, Plot-011213, Enamul Hoq Chowdhury Road, Dhaka</string>
    <string name="address_restaurants_five">Rd No 27, Dhaka 1212</string>
    <string name="address_restaurants_six">Shahid Baki Rd, Dhaka 1219</string>
    <string name="address_restaurants_seven">29 Dakhin Banasree Project Road, Dhaka 1219</string>
    <string name="address_restaurants_eight">Natore Tower Shopno Food Court,3rd Floor, Road No 2, Dhaka 1230</string>
    <string name="address_restaurants_nine">A. R. Twoer, 24 Kemal Ataturk Avenue, Dhaka 1213</string>
    <string name="address_restaurants_ten">Shahid Baki Rd, Dhaka</string>
    <string name="web_restaurants_one">01776 009 911</string>
    <string name="web_restaurants_two">01978 650 751</string>
    <string name="web_restaurants_three">01711 119 692</string>
    <string name="web_restaurants_four">01841 337 770</string>
    <string name="web_restaurants_five">02 8 831 064</string>
    <string name="web_restaurants_six">01759 732 283</string>
    <string name="web_restaurants_seven">01611 176 736</string>
    <string name="web_restaurants_eight">01946 259 054</string>
    <string name="web_restaurants_nine">02 8 818 341</string>
    <string name="web_restaurants_ten">02 9 351 222</string>
    <string name="map_restaurants_one"></string>
    <string name="map_restaurants_two"></string>
    <string name="map_restaurants_three"></string>
    <string name="map_restaurants_four"></string>
    <string name="map_restaurants_five"></string>
    <string name="map_restaurants_six"></string>
    <string name="map_restaurants_seven"></string>
    <string name="map_restaurants_eight"></string>
    <string name="map_restaurants_nine"></string>
    <string name="map_restaurants_ten"></string>
    <string name="park_one">Chandrima Udyan</string>
    <string name="park_two">Bangladesh National Zoo</string>
    <string name="park_three">Dhanmondi Lake</string>
    <string name="park_four">National Botanical Garden</string>
    <string name="park_five">Ramna Park</string>
    <string name="park_six">Road To BD</string>
    <string name="park_seven">Rose Garden</string>
    <string name="todo">TODO</string>
    <string name="historical_places">Historical Places</string>
</resources>