<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_grad"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ab.dhakacityguide.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <FrameLayout

        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/frame_bg"
        android:layout_margin="@dimen/fab_margin"
        >

        <TextView
            android:gravity="center_vertical"
            android:id="@+id/tv_hotels"
            style="@style/categoryStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/hotels"
            android:drawableStart="@mipmap/hotel"
            android:text="@string/hotels"
            android:drawableLeft="@mipmap/hotel" />
    </FrameLayout>

    <FrameLayout
        android:layout_margin="@dimen/fab_margin"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/frame_bg"
        >

        <TextView
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tv_restaurants"
            style="@style/categoryStyle"
         android:drawableStart="@mipmap/restaurant"
            android:text="@string/restaurants"
            android:drawableLeft="@mipmap/restaurant" />

    </FrameLayout>

    <FrameLayout
        android:layout_margin="@dimen/fab_margin"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/frame_bg"
        >

        <TextView
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:id="@+id/tv_tourist"
            style="@style/categoryStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/tourist_site"
            android:drawableStart="@mipmap/places"
            android:text="@string/historical_places"
            android:drawableLeft="@mipmap/places" />
    </FrameLayout>

    <FrameLayout
        android:layout_margin="@dimen/fab_margin"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/frame_bg"
        >

        <TextView
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tv_parks"
            style="@style/categoryStyle"
            android:contentDescription="@string/parks"
            android:drawableStart="@mipmap/park"
            android:text="@string/parks"
            android:drawableLeft="@mipmap/park" />
    </FrameLayout>





</LinearLayout>
