<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/text_container"
    android:padding="16dp"
    android:background="@drawable/list_background"
    tools:context="com.example.ab.dhakacityguide.SplashScreenActivity">


    <TextView
        android:id="@+id/tv_place_name"
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        tools:text="Item Name" />

    <ImageView
        android:id="@+id/iv_place_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        tools:src="@drawable/ic_launcher"
        android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/tv_place_discription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:padding="8dp"
            android:text="@string/decription_hotel_one"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black"
             />


    <LinearLayout
        android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/tv_place_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autoLink="map"
            android:drawablePadding="4dp"
            android:drawableStart="@drawable/ic_location"
            android:gravity="top"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:text="@string/location_hotel_one"
            android:textColor="@android:color/black"

            android:drawableLeft="@drawable/ic_location" />

        <TextView
            android:id="@+id/tv_place_website"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:drawableEnd="@drawable/ic_link"
            android:drawablePadding="2dp"
            android:drawableRight="@drawable/ic_link"
            android:gravity="end"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:text="@string/web_hotel_one"
            android:textColor="@android:color/black" />

    </LinearLayout>


</LinearLayout>
